# fuzz-lang

./: .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  Makefile  README.md  example_fuzz  fuzz  initial-project-setup.mk  pyproject.toml  square
.github/workflows/: ci-macos.yml
__transpiled__/: fuzz.rs  fuzz_transpiled.c  square.rs
examples/: example.fuzz  fuzz_squared.fuzz  hello_world.fuzz
fuzz_lang/: __init__.py  code_gen.py  compiler.py  lexical_analysis.py  parsing.py
fuzz_lang/transpiler/: code_gen.py  lexical_analysis.py  parsing.py  transpiler.py
